<resources>
    <string name="app_name">Bhadama</string>
    <string name="bhadama">भाडामा</string>
    <string name="app_icon">app_icon</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>1
    <string name="pin">Pin</string>
    <string name="reenterpin">Confirm Pin</string>
    <string name="signin">Sign in</string>
    <string name="forgotpin"><u>Forgot Pin?</u></string>
    <string name="newuser"><u>New User? Sign up</u></string>
    <string name="name">Name</string>
    <string name="proceed">Proceed</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="ALocation">Location </string>
    <string name="Location">Add Location </string>
    <string name="range">Rs %1$d000 - Rs %2$d999</string>

    <string name="api_key">AIzaSyBbQvmUqNK7llIfVdi8L1b7VS8zy0uJj3o</string>
    <string name="search">Search Property</string>
    <string name="search_location">Search Location</string>
    <string name="myProperty">My Property</string>
    <string name="interestedproperty">Interested Property</string>
    <string name="backgroundimage">backgroundImage</string>
    <string name="user">user</string>
    <string name="navigation">navigation</string>
    <string name="close">close</string>

    <string name="searched_location">%1$s, %2$s</string>
    <string name="access_token">pk.eyJ1Ijoic3ViaGVjaGNoaHUiLCJhIjoiY2tpdHowdGxrMDN4OTJycDQ5b3p2dnBqNSJ9._SuLiHChFEcu02iTmYfHOw</string>
    <string name="polygon_circle_transformation_circle_steps">dummy1</string>
    <string name="polygon_circle_transformation_circle_radius">ok</string>
    <string name="polygon_circle_transformation_click_map_instruction">okee</string>
    <string name="_3_rooms">2+ Rooms</string>
    <string name="_2_rooms">2 Rooms</string>
    <string name="_1_room">1 Room</string>
    <string name="entire_flat">Flat</string>
    <string name="entire_house">House</string>
    <string name="no_property_added">No Property Added</string>
    <string name="roomsize">Room Size (Approx in sq meter)</string>
    <string name="rent">Rent</string>
    <string name="available">Available From</string>
    <string name="bed">Bed</string>
    <string name="cupboard">Cupboard</string>
    <string name="table">Table</string>
    <string name="ohers">Others</string>
    <string name="unfurnished">Unfurnished</string>
    <string name="otherfurnitures">Add Other Furnitures</string>
    <string name="parking">Parking</string>
    <string name="furnishing">Furnishing</string>
    <string name="twowheeler">2 Wheeler</string>
    <string name="fourwheeler">4 Wheeler</string>
    <string name="none">None</string>
    <string name="prefferedtenants">Preferred Tenants</string>
    <string name="bachelor">Bachelor</string>
    <string name="family">Family</string>
    <string name="anyone">Anyone</string>
    <string name="watersupply">Water Supply</string>
    <string name="nwsc">Nepal
        Water
        Supply
        Corp.</string>
    <string name="nwsc_plain">Nepal Water Supply Corp.</string>
    <string name="underground">Under
        Ground</string>
    <string name="other">Other Sources</string>
    <string name="addimage">Add Image</string>
    <string name="propertyImage">Property Image(s)</string>
    <string name="skip">Skip</string>
    <string name="propertysummary">Property Summary</string>
    <string name="furnished">Furnished</string>
    <string name="publishproperty">Publish Property</string>
    <string name="updateProperty">Update Property</string>
    <string name="contactowner">Contact Owner</string>
    <string name="unlockcontact">Unlock Contact</string>
    <string name="nopermission">You have previously declined %1$s.\n\nGo to <b>Settings --> Permission</b>, approve the permission to upload images.</string>
    <string name="settings">Settings</string>
    <string name="login_pref">LoginPref</string>
    <string name="at">AccessToken</string>
    <string name="view_map">View In Map</string>
    <string name="total_room">"%1$s %2$s"</string>
    <string name="rent_amt">"%1$d"</string>
    <string name="rent_amount">"Rs %1$s"</string>
    <string name="rent_amount_int">"Rs %1$d"</string>
    <string name="bothParking"><![CDATA[2 & 4 Wheeler]]></string>
    <string name="parking_2">2 Wheeler</string>
    <string name="parking_4">4  Wheeler</string>
    <string name="differentSources">Different Water Sources</string>
    <string name="tenants">Preferred Tenants: %1$s</string>
    <string name="noparking">No Parking</string>
    <string name="nowater">No Water Source</string>
    <string name="tnc">I declare all information provided is correct.\nI take responsibility for any wrong information.</string>
    <string name="viewall">View All</string>
    <string name="date">%1$d-%2$d-%3$d</string>
    <string name="date_possession">%1$s %2$d-%3$d-%4$d</string>
    <string name="call_owner">Call Owner</string>
    <string name="property_data_upload">Please Wait While We Upload Your Information…</string>
    <string name="uploading_images">Uploding images (%1$d/%2$d)</string>
    <string name="add_property">Add Property</string>
    <string name="empty_property">No property added</string>
    <string name="unable_to_fetch">Unable to fetch your data. Please try again</string>
    <string name="edit_property">Edit Property</string>
    <string name="approved">Verification Approved</string>
    <string name="pending">Verification Pending</string>
    <string name="disable_property">Disable Property</string>
    <string name="delete">Delete</string>
    <string name="disable">Disable</string>
    <string name="delete_property">Delete Property</string>
    <string name="delete_warning">Delete Property will remove this property from the database. You cannot repost it in future.\nIf you wish to hide the property but not delete, Select Disable Property in previous option.\n\nAre you sure to proceed?</string>
    <string name="disable_warning">Disable Property will hide it from the buyers. You can re-enable it later.\n\nAre you sure you want to proceed?</string>
    <string name="flatorhouse">Flat/House</string>
    <string name="hangon">Hang on. It\'s almost done.</string>
    <string name="room_details">Room Details</string>
    <string name="processing_image">Processing Image</string>
    <string name="enter_new_pin">Enter new Pin</string>
    <string name="all_fields_are_mandatory">All fields are mandatory</string>

</resources>