<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_design">

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/icon_main"
        android:contentDescription="@string/app_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="Name"
            android:background="@drawable/rounded_corner"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="10dp"
            android:textColor="@color/secondary"
            android:textColorHint="@color/primary"
            android:textSize="17sp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="Mobile number"
            android:background="@drawable/rounded_corner"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingHorizontal="10dp"
            android:textColor="@color/secondary"
            android:textColorHint="@color/primary"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="Pin"
            android:background="@drawable/rounded_corner"
            android:hint="@string/pin"
            android:inputType="number"
            android:maxLength="4"
            android:paddingHorizontal="10dp"
            android:textColor="@color/secondary"
            android:textColorHint="@color/primary"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="Pin"
            android:background="@drawable/rounded_corner"
            android:hint="@string/reenterpin"
            android:inputType="number"
            android:maxLength="4"
            android:paddingHorizontal="10dp"
            android:textColor="@color/secondary"
            android:textColorHint="@color/primary"
            android:textSize="17sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:autofillHints="Pin"
            android:background="@drawable/rounded_corner"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:textColor="@color/secondary"
            android:textColorHint="@color/primary"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_corner_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:onClick="proceedSignup"
            android:textColor="@color/secondary" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>