<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/app_icon"
            android:scaleType="fitStart"
            android:visibility="invisible"
            app:srcCompat="@drawable/icon_main" />


        <TextView
            android:id="@+id/textView_furnitures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/furnishing"
            android:textColor="@color/white_secondary"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_range_seekbar" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_vertical"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <CheckBox
                android:id="@+id/checkbox_furnished"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/furnished"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />


            <CheckBox
                android:id="@+id/checkbox_unfurnished"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/unfurnished"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/edittext_addprop_others"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="Name"
            android:background="@drawable/rounded_corner"
            android:hint="@string/otherfurnitures"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="10dp"
            android:textColor="@color/secondary"
            android:textColorHint="@color/primary"
            android:textSize="17sp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/textView_parking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/parking"
            android:textColor="@color/white_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_range_seekbar" />

        <LinearLayout
            android:id="@+id/linearLayoutParking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_rooms">

            <CheckBox
                android:id="@+id/checkbox_twowheeler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/twowheeler"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_fourwheeler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/fourwheeler"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_noParking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/none"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_tenant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/prefferedtenants"
            android:textColor="@color/white_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_range_seekbar" />

        <LinearLayout
            android:id="@+id/linearLayouttenant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_rooms">

            <CheckBox
                android:id="@+id/checkbox_bachelor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/bachelor"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_family"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/family"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_anyone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/anyone"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_watersupply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/watersupply"
            android:textColor="@color/white_secondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_range_seekbar" />

        <LinearLayout
            android:id="@+id/linearLayoutwatersupply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_rooms">

            <CheckBox
                android:id="@+id/checkbox_nwsc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/nwsc"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_underground"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/underground"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkbox_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/checkbox_selector"
                android:button="@null"
                android:checked="false"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:text="@string/other"
                android:textColor="@color/white_secondary"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>